<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_announces"
            android:icon="@drawable/ic_promotion"
            android:title="@string/ads" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_user"
            android:title="@string/Account" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_price_tag"
            android:title="@string/sell" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/Chat" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/Notification" />

    </group>

    <item android:title="@string/Communicate">
        <menu>

            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/Contact" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_star"
                android:title="Rate" />
        </menu>
    </item>

</menu>
